--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
     <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
     <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
-    <a href="#photos" class="w3-bar-item w3-button" style="width:25% !important">PHOTOS</a>
     <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
   </div>
 </div>
@@ -79,11 +78,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
     <!-- Testimonials -->
     <h3 class="w3-padding-24 w3-text-light-grey">My Reputation</h3>  
-    <img src="/w3images/bandmember.jpg" alt="Image not available" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="IMG_20190820_112201.jpg" alt="Image not available" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-margin-right">K.Thani</span> Celeb at St. pauls</p>
     <p>UBiaka hi chhelo nia :)</p><br>
     
-    <img src="/w3images/avatar_g2.jpg" alt="Image not available" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="IMG_20190820_112222.jpg" alt="Image not available" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-margin-right">Sangsangi</span> Another celeb at St Pauls</p>
     <p>UBiaka hi chuan min duh se chu ka hreh lo</p>
   
