--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p><span class="w3-large w3-margin-right">K.Thani</span> Celeb at St. pauls</p>
     <p>UBiaka hi chhelo nia :)</p><br>
     
-    <img src="IMG_20190820_112222.jpg" alt="Image not available" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-margin-right">Sangsangi</span> Another celeb at St Pauls</p>
+    <img src="Remremi.jpg" alt="Image not available" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <p><span class="w3-large w3-margin-right">Remremi</span> My imaginary girlfriend</p>
     <p>UBiaka hi chuan min duh se chu ka hreh lo</p>
   
 
